apps/pihole/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pihole
    spec:
      nodeSelector:
        pihole: "yes"
      containers:
      - env:
        - name: ServerIP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        - name: TZ
          value: America/New_York
        - name: FTLCONF_dns_upstreams
          value: '8.8.8.8;1.1.1.1'
        - name: FTLCONF_webserver_api_password
          valueFrom:
            secretKeyRef:
              key: WEBPASSWORD 
              name: pihole-password
        - name: FTLCONF_webserver_port
          value: "8081,8443s"
        image: pihole/pihole:2025.04.0
        imagePullPolicy: IfNotPresent
        name: pihole
        ports:
        - containerPort: 8081
          name: pihole-http
          protocol: TCP
        - containerPort: 8443
          name: pihole-ssl
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 67
          name: client-udp
          protocol: UDP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/pihole
          name: config
        - mountPath: /etc/dnsmasq.d/02-custom.conf
          name: custom-dnsmasq
          subPath: 02-custom.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: pihole-config
      - configMap:
          defaultMode: 420
          name: pihole-custom-dnsmasq
        name: custom-dnsmasq
status: {}
