apps/pihole/pihole-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-svc
  namespace: pihole
spec:
  type: LoadBalancer
  ports:
  - name: dns-tcp
    port: 53
    targetPort: dns
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP
  - name: http
    port: 8081
    protocol: TCP
    targetPort: pihole-http
  - name: https
    port: 8443
    protocol: TCP
    targetPort: pihole-ssl
  selector:
    app: pihole
